
syntax = "proto3";

package erda.common;
option go_package = "github.com/erda-project/erda-proto-go/common/pb";

message VoidRequest {
}

message VoidResponse {
}